cinema and cinemaDetail

--- a/css/base.css
+++ b/css/base.css
@@ -23,6 +23,6 @@ body {
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
     line-height: 1;
     color: #333;
-    background-color: #f0efed;
+    background-color: #fff;
     display: block;
 }
