--- a/components/sun/mDetail.scss
+++ b/components/sun/mDetail.scss
@@ -65,14 +65,14 @@
         border-bottom:1px solid #ccc;
         ul{
             height:290px;
-            width:999px;
+            width:2955px;
             li{
                 width:130px;
                 float:left;
                 margin-left:17px;
                 margin-top:30px;
                 text-align:center;
-                p{font-size:24px;}
+                p{font-size:24px;margin:0;}
                 span{color:#666;font-size:24px;}
             }
         }
@@ -100,6 +100,8 @@
             span{
                 color:#e54847;
                 font-size:50px;
+                position: relative;
+                top: 25px;
             }
             p{
                 font-size:24px;
@@ -129,12 +131,13 @@
                 width:90%;
                 margin:0 auto;
                 p{font-size:12px;color:#666;padding-top:20px;}
-                .content{font-size:25px;}
+                .content{font-size:15px;}
             }
         }
         .xfoot{
             width:100%;
             overflow:hidden;
+            padding-bottom: 20px;
             .xleft{
                 float:left;
                 line-height:30px;
@@ -161,8 +164,23 @@
             .xright{
                 float:right;
                 margin-top:10px;
-                span{font-size:24px;margin-left:15px;}
+                span{font-size:24px;margin-left:50px;position:relative;top:40px;}
             }
+        }
+    }
+    .xfooter{
+        width:100%;
+        margin-top:30px;
+        text-align:center;
+        span{
+            height:80px;
+            display:inline-block;
+            line-height:80px;
+            width:180px;
+            background:#75c60d;
+            border-radius:5px;
+            color:white;
+            margin-left:20px;
         }
     }
 }
